2024-xx Cumulative Update (2.3.xx)

--- a/index.html
+++ b/index.html
@@ -429,8 +429,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/hmARG3p.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="LTA Bus Stop Pole Design Refresh"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/lta-bp.html"class="portfolio-details-lightbox" data-glightbox="type: external"
-                  title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/lta-bp.html"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -445,8 +444,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/igra3.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/igra3.html"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -478,8 +476,7 @@
                   <a href="https://i.imgur.com/7xTbMaT.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="New Wayfinding System for BP12 Jelapang"><i
                       class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/bp12.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/bp12.html"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -704,8 +701,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FvSOI1R.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Friends Forever Logo Design"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/ffl.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/ffl.html"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
