2024-xx Cumulative Update (2.3.xx)

--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -38,7 +38,7 @@
         <!-- ======= Portfolio Header ======= -->
     <div class="port-cover port-cover-sm same-height overlay single-page" style="background-image: url('https://i.imgur.com/FpftxKy.png');">
       <div class="container">
-        <h6><a href="#portfolio"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Back to Home</h6></a>
+        <h6><a href="../index.html#portfolio"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Back to Home</h6></a>
         <div class="row same-height justify-content-center">
           <div class="col-md-6">
             <div class="port-entry text-center">
