2024-xx Cumulative Update (2.3.65-RC)

--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -38,7 +38,7 @@
         <!-- ======= Portfolio Header ======= -->
     <div class="port-cover port-cover-sm same-height overlay single-page" style="background-image: url('https://i.imgur.com/FpftxKy.png');">
       <div class="container">
-        <h6><a href="../index.html#portfolio"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Back to Home</h6></a>
+        <h6><a href="../index.html#portfolio"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;<i class="fa-solid fa-house"></i></a>
         <div class="row same-height justify-content-center">
           <div class="col-md-6">
             <div class="port-entry text-center">
@@ -147,7 +147,7 @@
                   </li>
 
                   <li>
-                    <a href="bp12.html">
+                    <a href="lta-pids.html">
                       <img src="https://i.imgur.com/YPvwxyN.png" alt="Image placeholder" class="me-4 rounded">
                       <div class="text">
                         <h4 class="sa-post">LTA Bus PIDS Redesign</h4>
@@ -161,7 +161,7 @@
                 </ul>
               </div>
             </div>
-            <!-- END sidebar-box -->
+
   
           </div>
 
