--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
+            <div class="resume-item resume-item-present">
               <h5>2019-2022 | Tertiary Education (2)</h5>
               <h4>Diploma in Information Technology</h4>
               <p><em>Singapore Polytechnic (SP)</em></p>
@@ -327,7 +327,7 @@
             </div>
 
             <h3 class="resume-title">Experiences</h3>
-            <div class="resume-item">
+            <div class="resume-item resume-item-present">
               <h5>Sep 2023 - Present</h5><br>
               <h4>Supply Assistant (GE) (2) - SBC CP ASA</h4>
               <h5>Nov 2022 - Sep 2023</h5>
@@ -353,7 +353,7 @@
 
           <div class="col-lg-6">
             <h3 class="resume-title">Awards & Achievements</h3>
-            <div class="resume-item">
+            <div class="resume-item resume-item-present">
               <h5>2023</h5>
               <p><em>Singapore Armed Forces (SAF) </em></p>
               <ul>
@@ -429,7 +429,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/hmARG3p.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="LTA Bus Stop Pole Design Refresh"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/lta-bp.html"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/lta-bp.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -444,7 +444,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/igra3.html"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/igra3.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -459,8 +459,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/3Q3DFDx.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Train Delays Checker V2"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/delays-checker.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -492,8 +491,7 @@
                   <a href="https://i.imgur.com/dQ1DiXn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Wayfinding? Right this way. - Improving PT Signages"><i
                       class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/wayfind.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -508,8 +506,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/DkH8xMb.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/mrt-signage-rep-s2.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -524,8 +521,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/Ks81VPH.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="More Replications"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/more-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/more-rep.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -540,8 +536,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/GnZ5kWq.pngg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MyTransport.SG App Redesign"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/myts-app.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/myts-app.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -556,8 +551,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/YPvwxyN.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="LTA Bus PIDS Redesign"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/lta-pids.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/lta-pids.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -572,8 +566,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/ojpKcMf.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MAN A22 Lion Mascot Replication"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/man-a22-masc.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/man-a22-masc.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -588,8 +581,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/B1ktST3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications S1"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/mrt-signage-rep-s1.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -604,8 +596,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/0cL7BPm.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications S1"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/hydrationreg.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/hydrationreg.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -620,8 +611,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/XWWpWCJ.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Bus Replications"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/bus-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/bus-rep.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -636,8 +626,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/QERaZYq.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="EZ-Link Card Redesign"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/ezlink-red.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/ezlink-red.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -652,8 +641,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/vo3jfnm.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="COVID-19 Shopping Habits Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/igra2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/igra2.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -669,8 +657,7 @@
                   <a href="https://i.imgur.com/MKX6hwn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Food Review Compiler/Flashify - a Flashcard App"><i
                       class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/food-rev-flash-app.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/food-rev-flash-app.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -685,8 +672,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/wJYGopb.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Infographic Resume"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/igra1.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/igra1.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -701,7 +687,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FvSOI1R.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Friends Forever Logo Design"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/ffl.html"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/ffl.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
