--- a/index.html
+++ b/index.html
@@ -299,8 +299,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/KdM9sPR.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="OpenBVE Trains"><i class="bi bi-zoom-in"></i></a>
-                  <a href="releases/openbve-trains.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Download Here"><i class="fa-solid fa-download"></i></a>
+                  <a href="releases/openbve-trainsN.html" title="Download Here"><i class="fa-solid fa-download"></i></a>
                 </div>
               </div>
             </div>
