--- a/blog-alpha.html
+++ b/blog-alpha.html
@@ -47,7 +47,7 @@
 
         <nav id="navbar" class="navbar nav-menu">
             <ul>
-                <li><a href="index.html#hero" class="nav-link scrollto active"><i
+                <li><a href="index.html#hero" class="nav-link scrollto"><i
                             class="fa-solid fa-house"></i><span>Home</span></a></li>
                 <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user"
                             style="padding: 2px;"></i><span>About Me</span></a></li>
@@ -63,7 +63,7 @@
                 <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
                             NRFZ</span></a>
                 </li>
-                <li><a href="blog-alpha.html" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Blog
+                <li><a href="blog-alpha.html" class="nav-link scrollto active"><i class="fa-solid fa-list"></i><span>Blog
                             (WIP)</span></a>
                 </li>
             </ul>
@@ -105,13 +105,13 @@
                     <div class="case">
                         <div class="row">
                             <div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-                                <a href="blog-single.html" class="img w-100 mb-3 mb-md-0"
+                                <a href="blog/wayfind.html" class="img w-100 mb-3 mb-md-0"
                                     style="background-image: url(images/image_1.jpg);"></a>
                             </div>
                             <div class="col-md-6 col-lg-6 col-xl-4 d-flex">
                                 <div class="text w-100 pl-md-3">
                                     <span class="subheading">Illustration</span>
-                                    <h2><a href="blog-single.html">Build a website in minutes with Adobe Templates</a>
+                                    <h2><a href="blog/wayfind.html">Build a website in minutes with Adobe Templates</a>
                                     </h2>
                                     <ul class="media-social list-unstyled">
                                         <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -346,97 +346,31 @@
             </div>
         </div>
     </section>
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="logo"><a href="#">Read<span>it</span>.</a></h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the blind texts.</p>
-                        <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">latest News</h2>
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-                            <div class="text">
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a>
-                                </h3>
-                                <div class="meta">
-                                    <div><a href="#"></span> Oct. 16, 2019</a></div>
-                                    <div><a href="#"></span> Admin</a></div>
-                                    <div><a href="#"></span> 19</a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
-                            <div class="text">
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a>
-                                </h3>
-                                <div class="meta">
-                                    <div><a href="#"></span> Oct. 16, 2019</a></div>
-                                    <div><a href="#"></span> Admin</a></div>
-                                    <div><a href="#"></span> 19</a></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4 ml-md-5">
-                        <h2 class="ftco-heading-2">Information</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="py-1 d-block"><span
-                                        class="ion-ios-arrow-forward mr-3"></span>Home</a></li>
-                            <li><a href="#" class="py-1 d-block"><span
-                                        class="ion-ios-arrow-forward mr-3"></span>About</a></li>
-                            <li><a href="#" class="py-1 d-block"><span
-                                        class="ion-ios-arrow-forward mr-3"></span>Articles</a></li>
-                            <li><a href="#" class="py-1 d-block"><span
-                                        class="ion-ios-arrow-forward mr-3"></span>Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Have a Questions?</h2>
-                        <div class="block-23 mb-3">
-                            <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
-                                        View, San Francisco, California, USA</span></li>
-                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-                                            210</span></a></li>
-                                <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><span
-                                                class="__cf_email__"
-                                                data-cfemail="731a1d151c330a1c0601171c1e121a1d5d101c1e">[email&#160;protected]</span></span></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p>
-                        Copyright &copy;
-                        <script data-cfasync="false"
-                            src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                        is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
-                            href="https://colorlib.com" target="_blank">Colorlib</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
+
+    <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
+      </div>
+      <div class="modified">
+        Last Modified: <a href="blog-alpha.html">May 2024</a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"
+      style="font-size: 20px;"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
@@ -455,9 +389,6 @@
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/jquery.animateNumber.min.js"></script>
     <script src="assets/js/scrollax.min.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="assets/js/google-map.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/main-blog.js"></script>
 
