--- a/index.html
+++ b/index.html
@@ -47,15 +47,12 @@
               style="padding: 2px;"></i><span>About Me</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="fa-solid fa-chart-bar"></i><span>Skills</span></a>
         </li>
-        <li><a href="#ord" class="nav-link scrollto"><i class="fa-solid fa-person-military-rifle"></i><span>ORD
-              Counter</span></a>
-        </li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a>
         </li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
               NRFZ</span></a>
         </li>
-        <li><a href="blog-alpha.html" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Blog (WIP)</span></a>
+        <li><a href="blog.html" class="nav-link scrollto"><i class="fa-solid fa-pen-clip"></i><span>Blog (WIP)</span></a>
         </li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -290,36 +287,6 @@
               </div>
             </div>
 
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
-
-
-    <!-- ========================================== ORD Section ========================================== -->
-    <section id="ord" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2><i class="fa-solid fa-person-military-rifle"></i>&nbsp;&nbsp;ORD Counter</h2>
-          <p>How many more days to ORD? <b>(as of 19 June)</b></p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-12">
-
-            <div class="progress">
-              <span class="skill">31 days remaining <i class="val">95.77%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95.77" aria-valuemin="0"
-                  aria-valuemax="100">
-                </div>
-              </div>
-            </div>
 
           </div>
 
@@ -751,7 +718,7 @@
         &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: <a href="blog-alpha.html">May 2024</a>
+        Last Modified: <a href="blog.html">May 2024</a>
       </div>
     </div>
   </footer><!-- End Footer -->
