--- a/blog.html
+++ b/blog.html
@@ -62,8 +62,7 @@
                             By
                             NRFZ</span></a>
                 </li>
-                <li><a href="blog.html" class="nav-link scrollto active"><i
-                            class="fa-solid fa-pen-clip"></i><span>Blog
+                <li><a href="blog.html" class="nav-link scrollto active"><i class="fa-solid fa-pen-clip"></i><span>Blog
                             (WIP)</span></a>
                 </li>
             </ul>
@@ -196,21 +195,27 @@
                 stroke="#F96D00" />
         </svg></div>
 
+    <!-- Vendor JS Files -->
+    <script src="../../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../../assets/vendor/aos/aos.js"></script>
+    <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../../assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="../../assets/js/jquery.min.js"></script>
     <script src="../../assets/js/jquery-migrate-3.0.1.min.js"></script>
     <script src="../../assets/js/popper.min.js"></script>
-    <script src="../../assets/js/bootstrap.min.js"></script>
     <script src="../../assets/js/jquery.easing.1.3.js"></script>
     <script src="../../assets/js/jquery.waypoints.min.js"></script>
     <script src="../../assets/js/jquery.stellar.min.js"></script>
     <script src="../../assets/js/owl.carousel.min.js"></script>
     <script src="../../assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="../../assets/js/aos.js"></script>
     <script src="../../assets/js/jquery.animateNumber.min.js"></script>
-    <script src="../../assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="../../assets/js/scrollax.min.js"></script>
-    <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
+
+
+    <!-- Template Main JS File -->
     <script src="../../assets/js/main.js"></script>
     <script src="../../assets/js/main-blog.js"></script>
 
