--- a/blog.html
+++ b/blog.html
@@ -51,10 +51,6 @@
                 <li><a href="#skills" class="nav-link scrollto"><i
                             class="fa-solid fa-chart-bar"></i><span>Skills</span></a>
                 </li>
-                <li><a href="index.html#ord" class="nav-link scrollto"><i
-                            class="fa-solid fa-person-military-rifle"></i><span>ORD
-                            Counter</span></a>
-                </li>
                 <li><a href="index.html#resume" class="nav-link scrollto"><i
                             class="fa-solid fa-timeline"></i><span>Timelines</span></a>
                 </li>
@@ -98,7 +94,7 @@
         </div>
     </div> -->
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('../assets/img/hero-bg.png');">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('assets/img/hero-bg.png');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
