2024-xx Cumulative Update (3.1.30)

--- a/blog.html
+++ b/blog.html
@@ -66,34 +66,6 @@
 
     </header><!-- End Header -->
 
-    <!--     <div class="hero-wrap" style="background-image: url('../assets/img/hero-bg.png');"
-        data-stellar-background-ratio="0.5">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row no-gutters slider-text align-items-center justify-content-start"
-                data-scrollax-parent="true">
-                <div class="header-title col-md-12 ftco-animate">
-                    <h2 class="subheading">Hello! Welcome to</h2>
-                    <h1 class="mb-4 mb-md-0">Blog</h1>
-                    <div class="row">
-                        <div class="col-md-7">
-                            <div class="text">
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                    Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right
-                                    at the coast of the Semantics, a large language ocean.</p>
-                                <div class="mouse">
-                                    <a href="#" class="mouse-icon">
-                                        <div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
     <section class="hero-wrap hero-wrap-2" style="background-image: url('assets/img/hero-bg.png');">
         <div class="overlay"></div>
         <div class="container">
@@ -129,13 +101,13 @@
                                     <h2><a href="blog/wayfind.html">New Wayfinding System - How has it been so far?</a>
                                     </h2>
                                     <div class="meta">
-                                        <p class="mb-0"><a href="#">30/06/2024</a> | <a href="#">5 min read</a></p>
+                                        <p class="mb-0">30/06/2024 | 5 min read</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <hr style="background-color: #fff;">
+                    <hr data-aos="fade-up">
 
 
 
@@ -146,7 +118,7 @@
                 <div class="col text-center">
                     <div class="block-27" data-aos="fade-up">
                         <ul>
-                            <li><a href="#">&lt;</a></li>
+                            <li><a href="#"><i class="fa-solid fa-chevron-left"></i></a></li>
                             <li class="active"><span>1</span></li>
                             <!-- <li><a href="#">2</a></li>
                             <li><a href="#">3</a></li>
@@ -167,7 +139,7 @@
                 &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
             </div>
             <div class="modified">
-                Last Modified: <a href="blog.html">May 2024</a>
+                Last Modified: June 2024</a>
             </div>
         </div>
     </footer><!-- End Footer -->
@@ -175,21 +147,6 @@
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"
             style="font-size: 20px;"></i></a>
-
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-                stroke="#F96D00" />
-        </svg></div>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
