--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: <a href="blog.html">May 2024</a>
+        Last Modified: June 2024</a>
       </div>
     </div>
   </footer><!-- End Footer -->
