2024-xx Cumulative Update (3.1.30)

--- a/blog.html
+++ b/blog.html
@@ -55,11 +55,11 @@
                             class="fa-solid fa-timeline"></i><span>Timelines</span></a>
                 </li>
                 <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works
-                            By
-                            NRFZ</span></a>
+                            By NRFZ</span>
+                    </a>
                 </li>
                 <li><a href="blog.html" class="nav-link scrollto active"><i class="fa-solid fa-pen-clip"></i><span>Blog
-                            (WIP)</span></a>
+                        </span></a>
                 </li>
             </ul>
         </nav><!-- .nav-menu -->
@@ -97,7 +97,7 @@
                             </div>
                             <div class="col-md-6 col-lg-6 col-xl-4 d-flex">
                                 <div class="text w-100 pl-md-3">
-                                    <span class="subheading">Illustration</span>
+                                    <span class="subheading">Designs</span>
                                     <h2><a href="blog/wayfind.html">New Wayfinding System - How has it been so far?</a>
                                     </h2>
                                     <div class="meta">
@@ -109,27 +109,51 @@
                         <hr>
                     </div>
 
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+
+                                <div class="case" data-aos="fade-up">
+                                    <div class="row">
+                                        <div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+                                            <a href="#" class="img w-100 mb-3 mb-md-0"
+                                                style="background-image: url(https://i.imgur.com/3Q3DFDx.png);"></a>
+                                        </div>
+                                        <div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+                                            <div class="text w-100 pl-md-3">
+                                                <span class="subheading">Website Design</span>
+                                                <h2><a href="#">Dabbling into Dashboard Website Desgin</a>
+                                                </h2>
+                                                <div class="meta">
+                                                    <p class="mb-0">05/07/2024 | 5 min read</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                </div>
 
 
 
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col text-center">
-                    <div class="block-27" data-aos="fade-up">
-                        <ul>
-                            <li><a href="#"><i class="fa-solid fa-chevron-left"></i></a></li>
-                            <li class="active"><span>1</span></li>
-                            <!-- <li><a href="#">2</a></li>
+
+                            </div>
+                        </div>
+                        <div class="row mt-5">
+                            <div class="col text-center">
+                                <div class="block-27" data-aos="fade-up">
+                                    <ul>
+                                        <li><a href="#"><i class="fa-solid fa-chevron-left"></i></a></li>
+                                        <li class="active"><span>1</span></li>
+                                        <!-- <li><a href="#">2</a></li>
                             <li><a href="#">3</a></li>
                             <li><a href="#">4</a></li>
                             <li><a href="#">5</a></li>
                             <li><a href="#">&gt;</a></li> -->
-                        </ul>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
     </section>
 
     <!-- ======= Footer ======= -->
