--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
               NRFZ</span></a>
         </li>
-        <li><a href="blog.html" class="nav-link scrollto"><i class="fa-solid fa-pen-clip"></i><span>Blog (WIP)</span></a>
+        <li><a href="blog.html" class="nav-link scrollto"><i class="fa-solid fa-pen-clip"></i><span>Blog</span></a>
         </li>
       </ul>
     </nav><!-- .nav-menu -->
