2024-xx Cumulative Update (3.1.40)

--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
                                         <div class="col-md-6 col-lg-6 col-xl-4 d-flex">
                                             <div class="text w-100 pl-md-3">
                                                 <span class="subheading">Website Design</span>
-                                                <h2><a href="#">Dabbling into Dashboard Website Desgin</a>
+                                                <h2><a href="#">Dabbling into Dashboard Website Design</a>
                                                 </h2>
                                                 <div class="meta">
                                                     <p class="mb-0">05/07/2024 | 5 min read</p>
