2024-xx Cumulative Update (3.1.40)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div id="centered-container" data-aos="fade-up">
       <div id="profile-picture"></div>
       <span id="title">Nurafian Zulkifli</span>
-      <span id="position">Supply Assistant (GE), Admin Support Assistant <br> &amp; IT Diploma Graduate</span>
+      <span id="position">IT Diploma Graduate,<br>Passionate about UI/Signage Designs</span>
       <div id="media">
         <a href="https://github.com/nurafianZulkifli" target="_blank" class="media_link" title="GitHub">
           <div class="fa-brands fa-github" style="font-size: 32px"></div>
@@ -108,8 +108,8 @@
                 <div class="icon">
                   <i class="fa-solid fa-person-military-rifle"></i>
                 </div>
-                <h3>Currently Serving The Nation</h3>
-                <p>Supply Assistant (GE) - Singapore Armed Forces</p>
+                <h3>OWADIO!</h3>
+                <p>Currently taking a break, looking for job opportunities</p>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
                   <i class="fa-solid fa-heart"></i>
                 </div>
                 <h3>Likes & Interests</h3>
-                <p>Signage Designs, UX Designs & Research, UI Designing, Gadgets & Techs</p>
+                <p>Wayfinding Signage Designs, UX Designs & Research, UI Designing, Gadgets & Techs</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -332,7 +332,7 @@
 
             <h3 class="resume-title">Experiences</h3>
             <div class="resume-item resume-item-present">
-              <h5>Sep 2023 - Present</h5><br>
+              <h5>Sep 2023 - July 2024</h5><br>
               <h4>Supply Assistant (GE) (2) - SBC CP ASA</h4>
               <h5>Dec 2022 - Sep 2023</h5>
               <h4>Supply Assistant (GE) (1) - SBC CP GE Store</h4>
@@ -718,7 +718,7 @@
         &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: June 2024</a>
+        Last Modified: July 2024</a>
       </div>
     </div>
   </footer><!-- End Footer -->
