2024-xx Cumulative Update (3.1.40)

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Blog (WIP)</title>
+    <title>Blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
@@ -77,8 +77,8 @@
                             <a href="../blog.html">Blog</a>
                         </span>
                     </p>
-                    <h1 class="mb-3 bread">Blog</h1>
-                    <p>My take on anything and everything.</p>
+                    <h1 class="mb-3 bread"><i class="fa-solid fa-pen-clip"></i> | Blog</h1>
+                    <p>My take on anything and everything. Also a platform to showcase the Behind-The-Scenes<br>of how my designs came to be.</p>
                 </div>
             </div>
         </div>
