--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-user"></i>&nbsp;&nbsp;About Me</h2>
+          <h2><i class="fa-solid fa-user"></i> | About Me</h2>
         </div>
 
         <div class="row g-2" data-aos-delay="200">
@@ -183,7 +183,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-chart-bar"></i>&nbsp;&nbsp;Skills</h2>
+          <h2><i class="fa-solid fa-chart-bar"></i> | Skills</h2>
           <p>Throughout my years, I have learnt several different types of Programming Languages, Softwares and
             Programs.</p>
         </div>
@@ -301,7 +301,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-timeline"></i>&nbsp;&nbsp;Timelines</h2>
+          <h2><i class="fa-solid fa-timeline"></i> | Timelines</h2>
           <p>Took a longer path to get to where I am today. Here's a look at my education, experiences and achievement
             timelines over the years.</p>
         </div>
@@ -404,7 +404,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Works By NRFZ</h2>
+          <h2><i class="fa-solid fa-list"></i> | Works By NRFZ</h2>
           <p>A collection of works I have done over the years. Some are commissioned, some are just passion projects. My
             huge interests are illustrations, like signages, vehicles and wireframes.</p>
         </div>
