--- a/blog.html
+++ b/blog.html
@@ -46,9 +46,9 @@
             <ul>
                 <li><a href="index.html#hero" class="nav-link scrollto"><i
                             class="fa-solid fa-house"></i><span>Home</span></a></li>
-                <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user"
+                <li><a href="index.html#about-me" class="nav-link scrollto"><i class="fa-solid fa-user"
                             style="padding: 2px;"></i><span>About Me</span></a></li>
-                <li><a href="#skills" class="nav-link scrollto"><i
+                <li><a href="index.html#skills" class="nav-link scrollto"><i
                             class="fa-solid fa-chart-bar"></i><span>Skills</span></a>
                 </li>
                 <li><a href="index.html#resume" class="nav-link scrollto"><i
