--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,8 @@
                         </span>
                     </p>
                     <h1 class="mb-3 bread"><i class="fa-solid fa-pen-clip"></i> | Blog</h1>
-                    <p>My take on anything and everything. Also a platform to showcase the Behind-The-Scenes<br>of how my designs came to be.</p>
+                    <p>My take on anything and everything. Also a platform to showcase the Behind-The-Scenes<br>of how
+                        my designs came to be.</p>
                 </div>
             </div>
         </div>
@@ -106,8 +107,9 @@
                                 </div>
                             </div>
                         </div>
-                        <hr>
                     </div>
+
+                    <hr>
 
                     <div class="container">
                         <div class="row">
@@ -130,8 +132,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <hr>
                                 </div>
+
+                                <hr>
 
 
 
