--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
         data-bg="#f2f3e5"
         data-fg="#000"
         data-font-family="Poppins, sans-serif"
+        data-zindex="15962538"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
