--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
 
 
-    <section class="why-choose-us-area bg-gray section-padding-80-0 clearfix">
+    <section class="about-me-area bg-gray section-padding-80-0 clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -243,7 +243,7 @@
             <div class="row">
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="wsd-icon">
                             <i class="fa-solid fa-signs-post"></i>
                         </div>
@@ -253,7 +253,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
                         <div class="ui-icon">
                             <i class="fa-solid fa-pen-ruler"></i>
                         </div>
@@ -264,7 +264,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
                         <div class="ux-icon">
                             <i class="fa-regular fa-face-smile-beam"></i>
                         </div>
@@ -293,7 +293,7 @@
                 </div>
             </div>
 
-            <div class="skill-ara">
+            <div class="skill-ara wow fadeInUp" data-wow-delay="100ms">
                 <div class="skill">
                     <div class="single-skill">
                         <div class="progress-count">
@@ -329,46 +329,30 @@
             </div>
         </div>
 
-        <div class="instragram-feed-area owl-carousel">
+        <div class="instragram-feed-area owl-carousel wow fadeInUp" data-wow-delay="300ms">
 
-            <div class="single-instagram-item">
+            <div class="single-software-item">
                 <img src="img/gallery/brand1.png" alt>
-                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div> -->
             </div>
 
-            <div class="single-instagram-item">
+            <div class="single-software-item">
                 <img src="img/gallery/brand2.png" alt>
-                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div> -->
             </div>
 
-            <div class="single-instagram-item">
+            <div class="single-software-item">
                 <img src="img/gallery/brand3.png" alt>
-                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div> -->
             </div>
 
-            <div class="single-instagram-item">
+            <div class="single-software-item">
                 <img src="img/gallery/brand4.png" alt>
-                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div> -->
+            </div>
+
+            <div class="single-software-item">
+                <img src="img/gallery/brand5.png" alt>
+            </div>
+
+            <div class="single-software-item">
+                <img src="img/gallery/brand6.png" alt>
             </div>
         </div>
 
@@ -394,9 +378,10 @@
                         </div>
 
                         <div class="social-info">
-                            <a href="#"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -405,7 +390,7 @@
     </footer>
 
     <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
-        data-padding="17px 16px" data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif"
+        data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif"
         data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
